--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -62,8 +62,7 @@ body {
     .chicken,
     .beef {
         display: inline-block;
-        margin-left: 1rem;
-        width: calc(50% - 20px);
+        width: calc(50% - 4px);
     }
 }
 
@@ -72,7 +71,7 @@ body {
     .chicken,
     .beef,
     .sushi {
-        margin-left: 1rem;
+        margin: 0 0.5rem;
         display: inline-block;
         width: calc(33.33% - 20px);
     }
